--- a/proyect/Experiment/Experiment.csproj
+++ b/proyect/Experiment/Experiment.csproj
@@ -46,17 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="model\Controller.cs" />
-    <Compile Include="model\Methods.cs" />
-    <Compile Include="ui\FirstScreen.cs">
+    <Compile Include="Model\ExperimentManager.cs" />
+    <Compile Include="Model\Order.cs" />
+    <Compile Include="Model\SortAlgorithms.cs" />
+    <Compile Include="UserInterface\FirstScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\FirstScreen.Designer.cs">
+    <Compile Include="UserInterface\FirstScreen.Designer.cs">
       <DependentUpon>FirstScreen.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\Program.cs" />
+    <Compile Include="UserInterface\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ui\FirstScreen.resx">
+    <EmbeddedResource Include="UserInterface\FirstScreen.resx">
       <DependentUpon>FirstScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
